[package]
name = "no_denormals"
authors = ["sintel"]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Sin-tel/no_denormals"
homepage = "https://github.com/Sin-tel/no_denormals"
readme = "README.md"
keywords = ["dsp", "float"]
description = "Temporarily turn off floating point denormals."
categories = ["multimedia::audio"]
